; ModuleID = '/home/carl/AnghaBench/openssl/crypto/asn1/extr_x_bignum.c_bn_c2i.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/asn1/extr_x_bignum.c_bn_c2i.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i8*, i32, i32, i8*, i32*)* @bn_c2i to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bn_c2i(i32** %0, i8* %1, i32 %2, i32 %3, i8* %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32**, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  store i32** %0, i32*** %8, align 8
  store i8* %1, i8** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i8* %4, i8** %12, align 8
  store i32* %5, i32** %13, align 8
  %15 = load i32**, i32*** %8, align 8
  %16 = load i32*, i32** %15, align 8
  %17 = icmp eq i32* %16, null
  br i1 %17, label %18, label %24

18:                                               ; preds = %6
  %19 = load i32**, i32*** %8, align 8
  %20 = load i32*, i32** %13, align 8
  %21 = call i32 @bn_new(i32** %19, i32* %20)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %24, label %23

23:                                               ; preds = %18
  store i32 0, i32* %7, align 4
  br label %37

24:                                               ; preds = %18, %6
  %25 = load i32**, i32*** %8, align 8
  %26 = load i32*, i32** %25, align 8
  store i32* %26, i32** %14, align 8
  %27 = load i8*, i8** %9, align 8
  %28 = load i32, i32* %10, align 4
  %29 = load i32*, i32** %14, align 8
  %30 = call i32 @BN_bin2bn(i8* %27, i32 %28, i32* %29)
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %36, label %32

32:                                               ; preds = %24
  %33 = load i32**, i32*** %8, align 8
  %34 = load i32*, i32** %13, align 8
  %35 = call i32 @bn_free(i32** %33, i32* %34)
  store i32 0, i32* %7, align 4
  br label %37

36:                                               ; preds = %24
  store i32 1, i32* %7, align 4
  br label %37

37:                                               ; preds = %36, %32, %23
  %38 = load i32, i32* %7, align 4
  ret i32 %38
}

declare dso_local i32 @bn_new(i32**, i32*) #1

declare dso_local i32 @BN_bin2bn(i8*, i32, i32*) #1

declare dso_local i32 @bn_free(i32**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
